<resources>
    <string name="app_name">Radiance</string>
    <string name="supported_by">SUPPORTED BY</string>
    <string name="UC">UNIVERSITAS CIPUTRA</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register_now">Register now</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="play">PLAY</string>
    <string name="choose_adventure">Choose Your Adventure</string>
    <string name="register">Register</string>
    <string name="login_now">Already have an account?</string>
    <string name="confirm_password">Password Confirmation</string>
    <string name="school">School</string>
    <string name="city">City</string>
    <string name="birthdate">Birthdate</string>
    <string name="choose_mode">Choose Game Mode</string>
    <string name="rae">Rae</string>
    <string name="next">Next</string>
<<<<<<< HEAD
<<<<<<< HEAD
    <string name="timer">05 : 00</string>
=======
    <string name="timer">15 : 00</string>
>>>>>>> parent of fcf53cb (push baru)
=======
    <string name="timer">15 : 00</string>
>>>>>>> parent of fcf53cb (push baru)
    <string name="leaderboard">Leaderboard</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
<<<<<<< HEAD
<<<<<<< HEAD
    <string name="score">0</string>
    <string name="DELETE">DELETE</string>
=======
>>>>>>> parent of fcf53cb (push baru)
=======
>>>>>>> parent of fcf53cb (push baru)
</resources>